* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)

== 2.3.8 (2023-06-25) - @mojavelinux

Improvements::

* do not attempt to fit inline image in normal table cell to computed height of cell (#2428)
* support `fit=none` attribute on inline image to prevent image from being scaled down to fit available height (#2428)

Bug Fixes::

* remove null character enclosed in XML tag when sanitizing text; fixes invisible text in outline when heading contains index term (#2430)
* alias `File.exists?` to `File.exist?` when loading RGhost optimizer to patch incompatibility when using Ruby 3.2

Build / Infrastructure::

* bump upper Ruby version from 3.1 to 3.2 in CI workflow

== 2.3.7 (2023-04-16) - @mojavelinux

Bug Fixes::

* don't crash if source block with custom subs is empty and source highlighter is enabled
* add workaround for JRuby on Windows when value of `imagesdir` attribute is absolute and contains non-ASCII characters

=== Details

{url-repo}/releases/tag/v2.3.7[git tag] | {url-repo}/compare/v2.3.6\...v2.3.7[full diff]

== 2.3.6 (2023-04-09) - @mojavelinux

Bug Fixes::

* rework `File.absolute_path?` patch so it returns correct response when running on JRuby

=== Details

{url-repo}/releases/tag/v2.3.6[git tag] | {url-repo}/compare/v2.3.5\...v2.3.6[full diff]

== 2.3.5 (2023-03-31) - @mojavelinux

Enhancements::

* add `callout-list-marker-font-color` theme key to control color of conum marker in callout list (#2402)

Bug Fixes::

* catalog all footnotes found inside AsciiDoc table cells and render them in the footnotes list (#2410)
* do not drop section that follows empty index (#2368)
* restore bottom margin on table with `breakable` or `unbreakable` option (#2379)